objects/vlocity_cmt__CartItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CartId__c</fullName>
        <description>ID of the parent Cart.</description>
        <label>Cart</label>
        <referenceTo>vlocity_cmt__Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>CartItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemImageUrl__c</fullName>
        <description>URL to an image of this item.</description>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Line number of this cart line item in the source system.</description>
        <externalId>true</externalId>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <description>Total non-recurring charges to be paid up front at check-out for this line item.</description>
        <label>Total: One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product (if known).</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>CartItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductCode__c</fullName>
        <description>Product code or SKU of the selected item.</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Quantity__c</fullName>
        <description>Quantity of the items requested.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <description>Total monthly recurring charges for this line item.</description>
        <label>Total: Monthly Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cart Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>